# cplusplus-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: FindGraphScope.cmake
script/: package.py  test.py
src/: my_app.h
src/vertex_data/: conf.yaml  hello.h  hello_context.h
src/vertex_degree/: CMakeLists.txt  vertex_degree.h  vertex_degree_context.h
